[project]
name = "csmodel-mcos"
version = "0.1.0"
dependencies = ["matplotlib>=3.10.8", "numpy>=2.4.2", "pandas>=3.0.1"]
requires-python = ">=3.14"
authors = [
  { name = "Darryl Panaligan" },
  { name = "Jek Degullado" },
  { name = "Elkan La Madrid" },
  { name = "Raphael Panaligan" },
]
# TODO: description = ""

[project.urls]
Repository = "https://github.com/seoyunnie/csmodel-mcos.git"

[dependency-groups]
dev = ["ipykernel>=7.2.0", "notebook>=7.5.3", "pandas-stubs>=3.0.0.260204", "ruff>=0.15.1", "ty>=0.0.17"]
